﻿drkns 24.10.2015 02:29:09 +0200 - build 4444

1. 0002520: Неправильный текст системной ошибки

2. 0003089: Мелкая правка в панели информации (Ctrl+L) (частично).

drkns 24.10.2015 01:21:54 +0200 - build 4443

1. Немного переименований для исправления предупреждений VS2015.

drkns 24.10.2015 00:04:08 +0200 - build 4442

1. С форума: показываем число папок в текущей панели.

2. Warnings.

w17 20.10.2015 16:21:53 +0300 - build 4441

1. M#3100: Crash on search in invalid ZIP archive
   Симптоматическое лечение.

svs 19.10.2015 10:31:45 +0300 - build 4440

1. SQLite 3.9.1

drkns 18.10.2015 13:18:18 +0200 - build 4439

1. В редакторе некорректно обрабатывались переводы строк для кодовых страниц, где они отличны от 0x0d / 0x0a (EBCDIC etc.)

drkns 17.10.2015 14:35:10 +0200 - build 4438

1. Рефакторинг.

svs 16.10.2015 12:33:02 +0300 - build 4437

1. Mantis#0003062: FSF.CopyToClipboard+FCT_COLUMN рассинхронизирует буфер обмена
   Для FCT_STREAM юзается SetClipboard, которая самостоятельно очищает буфер.
   Для FCT_COLUMN юзается SetClipboardFormat(FCF_VERTICALBLOCK_UNICODE), которая не очищает буфер, а добавляет туда данные. Соответственно OEM остается нетронутым.

   <АХТУНГ!>
   	SetClipboardFormat просто добавляет к существующему содержимому данные по вертикальному блоку.
   </АХТУНГ!>

svs 15.10.2015 16:40:58 +0300 - build 4436

1. Mantis#0003061: FSF.CopyToClipboard + FCT_COLUMN: вертикальные блоки, совместимые со сторонними приложениями
   Поддержка вертикальных блоков "Borland IDE Block Type" и "MSDEVColumnSelect" наравне с "FAR_VerticalBlock_Unicode".

   Новые типы в клипборд Far добавляет только при копировании вертикального блока.
   В клипборде:
     "FAR_VerticalBlock_Unicode" "родной" фаровский блок
     "Borland IDE Block Type" блок содержит 1 байт и равен 0x02
     "MSDEVColumnSelect"      блок содержит 0 байт.
     Сами данные содержатся в "CF_UNICODETEXT".

   При вставке в редактор Far знает про эти блоки и вставляет вертикальный блок.
