@@ -1,4 +1,9 @@
-﻿drkns 24.10.2015 02:29:09 +0200 - build 4444
+﻿drkns 24.10.2015 11:59:47 +0200 - build 4445
+
+1. 0003053: Раскраска файлов с >1 хардлинком замедляет панели на сетевых дисках
+   Добавлена проверка имени FS для тех ОС, которые не умеют FILE_SUPPORTS_HARD_LINKS.
+
+drkns 24.10.2015 02:29:09 +0200 - build 4444
 
 1. 0002520: Неправильный текст системной ошибки
 
